--- a/app/src/main/res/layout/vcs.xml
+++ b/app/src/main/res/layout/vcs.xml
@@ -3,15 +3,53 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:contentInsetLeft="0dp"
+            android:contentInsetStart="0dp"
+            android:layout_height="wrap_content">
 
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:id="@+id/ivNotification"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_action_notifications"
+                    android:layout_weight="0.2"
+            />
+
+            <TextView
+                    android:text="@string/app_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center_horizontal"
+            />
+
+            <ImageView
+                    android:id="@+id/ivSetting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_settings"
+                    android:layout_weight="0.2"/>
+
+
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="210dp"
-            android:paddingVertical="@dimen/paddingVertical"
-            android:paddingHorizontal="@dimen/paddingHorizontal"
-            android:layout_marginRight="@dimen/sideMargin"
-            android:layout_marginLeft="@dimen/sideMargin"
+            android:paddingVertical="20dp"
+            android:paddingHorizontal="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:background="@color/colorAccent"
             android:orientation="vertical"
     >
@@ -88,13 +126,11 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/sideMargin"
-            android:layout_marginTop="15dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
     >
         <Button
-                android:backgroundTint="#FFF"
-                android:paddingTop="10dp"
                 android:id="@+id/btnTransfer"
                 android:layout_width="wrap_content"
                 android:layout_height="108dp"
@@ -109,8 +145,6 @@
         />
 
         <Button
-                android:backgroundTint="#FFF"
-                android:paddingTop="10dp"
                 android:id="@+id/btnRequest"
                 android:layout_width="wrap_content"
                 android:layout_height="108dp"
@@ -135,7 +169,7 @@
                 android:text="@string/activity"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginLeft="@dimen/sideMargin"
 
         />
         <TextView
@@ -145,20 +179,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/view_all"
                 android:gravity="right"
-                android:layout_marginRight="@dimen/viewall_margin"
                 android:textSize="@dimen/normalFont"
+
                 android:layout_weight="1"
         />
+
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:scrollbars="vertical"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="@dimen/recyler_margin_horizontal"
-            android:layout_marginTop="@dimen/recycler_margin_top"
-
-    >
 
 
-    </androidx.recyclerview.widget.RecyclerView>
+
+
 </LinearLayout>
